<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    android:orientation="vertical"
    android:padding="20dp">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorDarkBlue"
        android:text="@string/register_message"
        android:textSize="20sp"
        android:fontFamily="serif-monospace" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:text="@string/register_register" />


</LinearLayout>

