<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlue"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_title"
        android:textColor="@color/colorRed"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_remember_me" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:backgroundTint="@color/colorRed"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />

        <Button
            android:id="@+id/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:backgroundTint="@color/colorOrange"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />

    </LinearLayout>


</LinearLayout>